--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -7,8 +7,8 @@
 
     <fragment
         android:id="@+id/listFragment"
-        android:name="com.example.run.fragments.list.ListFragment"
-        android:label="List"
+        android:name="com.example.run.fragments.users.update.list.ListFragment"
+        android:label="Corrida"
         tools:layout="@layout/fragment_list" >
         <action
             android:id="@+id/action_listFragment_to_addFragment"
@@ -16,10 +16,16 @@
         <action
             android:id="@+id/action_listFragment_to_updateFragment"
             app:destination="@id/updateFragment" />
+        <action
+            android:id="@+id/action_listFragment_to_listarCorridaFragment"
+            app:destination="@id/listarCorridaFragment" />
+        <action
+            android:id="@+id/action_listFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
     </fragment>
     <fragment
         android:id="@+id/addFragment"
-        android:name="com.example.run.fragments.add.AddFragment"
+        android:name="com.example.run.fragments.users.update.add.AddFragment"
         android:label="Add"
         tools:layout="@layout/fragment_add" >
         <action
@@ -28,7 +34,7 @@
     </fragment>
     <fragment
         android:id="@+id/updateFragment"
-        android:name="com.example.run.fragments.update.UpdateFragment"
+        android:name="com.example.run.fragments.users.update.UpdateFragment"
         android:label="Update"
         tools:layout="@layout/fragment_update" >
         <action
@@ -37,5 +43,44 @@
         <argument
             android:name="currentUser"
             app:argType="com.example.run.model.User" />
+        <action
+            android:id="@+id/action_updateFragment_to_listarCorridaFragment"
+            app:destination="@id/listarCorridaFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/addCorridaFragment"
+        android:name="com.example.run.fragments.corrida.add.addCorridaFragment"
+        android:label="Adicionar Corrida"
+        tools:layout="@layout/fragment_add_corrida" >
+        <action
+            android:id="@+id/action_addCorridaFragment_to_listarCorridaFragment"
+            app:destination="@id/listarCorridaFragment" />
+        <argument
+            android:name="currentCorrida"
+            app:argType="com.example.run.model.User" />
+    </fragment>
+    <fragment
+        android:id="@+id/listarCorridaFragment"
+        android:name="com.example.run.fragments.corrida.list.ListarCorridaFragment"
+        android:label="Listar Corrida"
+        tools:layout="@layout/fragment_listar_corrida" >
+        <action
+            android:id="@+id/action_listarCorridaFragment_to_addCorridaFragment"
+            app:destination="@id/addCorridaFragment" />
+        <argument
+            android:name="current_user"
+            app:argType="com.example.run.model.User" />
+        <action
+            android:id="@+id/action_listarCorridaFragment_to_updateFragment"
+            app:destination="@id/updateFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="com.example.run.LoginFragment"
+        android:label="fragment_login"
+        tools:layout="@layout/fragment_login" >
+        <action
+            android:id="@+id/action_loginFragment_to_listFragment"
+            app:destination="@id/listFragment" />
     </fragment>
 </navigation>
