--- a/app/src/main/res/layout/fragment_add.xml
+++ b/app/src/main/res/layout/fragment_add.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="24dp"
-    tools:context=".fragments.users.update.add.AddFragment">
+    tools:context=".fragments.Api.Users.add.AddUsersFragmentApi">
 
     <EditText
         android:id="@+id/addFirstName_et"
@@ -59,4 +59,9 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/addAge_et" />
+
+    <include
+        android:id="@+id/llProgressBar"
+        layout="@layout/progressbar"
+        android:visibility="gone" />
 </androidx.constraintlayout.widget.ConstraintLayout>
